--- a/MobeAdmin/MobeAdmin/Views/Shared/_Layout.cshtml
+++ b/MobeAdmin/MobeAdmin/Views/Shared/_Layout.cshtml
@@ -183,7 +183,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-                         with font-awesome or any other icon font library -->
+     with font-awesome or any other icon font library -->
                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -263,6 +263,23 @@
                                     <a href="@Url.Action("Index","SysPermission",new { Area = "SystemManage"})" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>角色權限</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-tree"></i>
+                                <p>
+                                    產品管理
+                                    <i class="fas fa-angle-left right"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Index","Product",new { area = "ProductManage"})" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>產品列表</p>
                                     </a>
                                 </li>
                             </ul>
