更新 拉一下介面 + 一個基礎的 Controller

--- a/MobeAdmin/MobeAdmin/Views/Shared/_Layout.cshtml
+++ b/MobeAdmin/MobeAdmin/Views/Shared/_Layout.cshtml
@@ -265,6 +265,12 @@
                                         <p>角色權限</p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Index","SysDepartment",new { Area = "SystemManage"})" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>部門管理</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
