--- a/MobeAdmin/MobeAdmin/Areas/SystemManage/Views/SysDepartment/Index.cshtml
+++ b/MobeAdmin/MobeAdmin/Areas/SystemManage/Views/SysDepartment/Index.cshtml
@@ -11,7 +11,7 @@
     <script src="~/lib//jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 }
-<script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"></script>
+
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
@@ -262,6 +262,74 @@
         }
     }
 
+    //Paginate
+    function LoadPaginate(TotalCount) {
+        $(".pageCount").html("共 " + TotalCount + " 筆。");
+        maxpage = (TotalCount / 15);
+        //處理頁籤
+        var tags = '<a href="#first">首頁</a>';
+        tags += '<a href="#prev"><<</a>';
+        if (parseInt(currentpage, 10) <= 5) {
+            for (var i = 0; i < Math.min(9, maxpage); i++) {
+                if (i == parseInt(currentpage, 10) - 1) {
+                    tags += '<a href="#' + (i + 1) + '"  class="current" style="background:#62ecd0;border:1px solid #a1e3e8;">' + (i + 1) + '</a>';
+                } else {
+                    tags += '<a href="#' + (i + 1) + '" >' + (i + 1) + '</a>';
+                }
+
+            }
+        } else if (parseInt(currentpage, 10) >= maxpage - 4) {
+            for (var i = Math.max(Math.ceil(maxpage) - 9, 0); i < maxpage; i++) {
+                if (i == parseInt(currentpage, 10) - 1) {
+                    tags += '<a href="#' + (i + 1) + '"  class="current">' + (i + 1) + '</a>';
+                } else {
+                    tags += '<a href="#' + (i + 1) + '" >' + (i + 1) + '</a>';
+                }
+            }
+        } else {
+            for (var i = parseInt(currentpage, 10) - 5; i < parseInt(currentpage, 10) + 4; i++) {
+                if (i == parseInt(currentpage, 10) - 1) {
+                    tags += '<a href="#' + (i + 1) + '"  class="current">' + (i + 1) + '</a>';
+                } else {
+                    tags += '<a href="#' + (i + 1) + '" >' + (i + 1) + '</a>';
+                }
+            }
+        }
+        tags += '<a href="#next">>></a>';
+        tags += '<a href="#last">末頁</a>';
+        var pages = "div#pages";
+        $(pages).html(tags);
+        //重新加入/超連結函數
+        $(pages + " a").click(function () {
+            var $this = $(this);
+            var gopage = currentpage;
+            if ($this.attr('href') == "#first") {
+                gopage = 1;
+            } else if ($this.attr('href') == "#prev") {
+                if (currentpage - 1 == 0) {
+                    gopage = 1;
+                } else {
+                    gopage = currentpage - 1;
+                }
+            } else if ($this.attr('href') == "#next") {
+                if (currentpage + 1 > Math.ceil(maxpage)) {
+                    gopage = Math.ceil(maxpage);
+                } else {
+                    gopage = currentpage + 1;
+                }
+            } else if ($this.attr('href') == "#last") {
+                gopage = Math.ceil(maxpage);
+            } else {
+                gopage = parseInt($this.attr('href').substring(1, 5), 10);
+            }
+            if (gopage == currentpage) { return false; }
+            currentpage = gopage;
+            SearchData();
+            return false;
+        });
+    }
+
+
     /* 載入Table */
     function AppendTableRow(obj) {
         var TplTr = $('script[data-template="TemplateDepartmentTr"]').text().split(/\$\{(.+?)\}/g);
@@ -270,6 +338,7 @@
             $('#TableDepartment tbody').append(TplTr.map(render(item)).join(''));
         });
     }
+
     /* 以條件生成 Listed 查詢條件 */
     function GetTableQueryString() {
         return '@Url.Action("ListedDepartment", "SysDepartment", new { Area = "SystemManage" })'
